--- a/eclipseCon2014/org.eclipse.e4.examples.di.extensions/META-INF/MANIFEST.MF.1.2
+++ b/eclipseCon2014/org.eclipse.e4.examples.di.extensions/META-INF/MANIFEST.MF.1.2
@@ -8,7 +8,7 @@ Require-Bundle: org.eclipse.core.runtime,
  org.eclipse.e4.core.di;bundle-version="1.4.0"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
-TODO-Service-Component: OSGI-INF/extensions.xml
+Service-Component: OSGI-INF/extensions.xml
 Import-Package: javax.annotation;version="1.0.0",
  javax.inject;version="1.0.0"
 Export-Package: org.eclipse.e4.examples.di.extensions,
