--- a/eclipseCon2014/org.eclipse.e4.examples.di.extensions/src/org/eclipse/e4/examples/di/extensions/internal/ExtensionsObjectSupplier.java.1.4
+++ b/eclipseCon2014/org.eclipse.e4.examples.di.extensions/src/org/eclipse/e4/examples/di/extensions/internal/ExtensionsObjectSupplier.java.1.4
@@ -12,11 +12,19 @@ package org.eclipse.e4.examples.di.extensions.internal;
 
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
+import java.util.Arrays;
 import java.util.List;
 
+import javax.inject.Inject;
+
+import org.eclipse.core.runtime.IExtensionPoint;
+import org.eclipse.core.runtime.IExtensionRegistry;
+import org.eclipse.e4.core.di.InjectionException;
+import org.eclipse.e4.core.di.annotations.Optional;
 import org.eclipse.e4.core.di.suppliers.ExtendedObjectSupplier;
 import org.eclipse.e4.core.di.suppliers.IObjectDescriptor;
 import org.eclipse.e4.core.di.suppliers.IRequestor;
+import org.eclipse.e4.examples.di.extensions.Extension;
 
 // TODO 1.2.1 Provide the extension object supplier
 // TODO 1.2.2 Provide this implementation as an OSGi Service
@@ -28,6 +36,8 @@ public class ExtensionsObjectSupplier extends ExtendedObjectSupplier {
 
 	// TODO 1.4 Return the currently valid IConfigurationElements
 	// TODO 1.4.1 get the IExtensionRegistry
+	@Inject
+	private IExtensionRegistry registry;
 
 	@Override
 	public Object get(IObjectDescriptor descriptor, IRequestor requestor,
@@ -38,14 +48,27 @@ public class ExtensionsObjectSupplier extends ExtendedObjectSupplier {
 		// We will pass through a list
 		if (List.class.isAssignableFrom(desiredType)) {
 			// TODO 1.4.2 get the annotation information
-
+			Extension qualifier = descriptor.getQualifier(Extension.class);
+			String extensionPointId = qualifier.value();
+			if (extensionPointId == null || extensionPointId.isEmpty()) {
+				throw new InjectionException(
+						"Failed to specify an extension point");
+			}
 			// TODO 1.5 track the extension point
 
 			// TODO 1.4.3 return the extension point information
-
+			IExtensionPoint extensionPoint = registry
+					.getExtensionPoint(extensionPointId);
+			if (extensionPoint != null) {
+				return Arrays.asList(extensionPoint.getConfigurationElements());
+			}
 			// TODO 1.4.5 handle the request for optional information
-
+			else if (descriptor.getQualifier(Optional.class) != null) {
+				return null;
+			}
 			// TODO 1.4.4 throw an exception if it can't be satisfied
+			throw new InjectionException("Failed to find Extension Point: "
+					+ extensionPointId);
 		}
 
 		// Annotation used with unsupported type
