--- a/eclipseCon2014/org.eclipse.e4.examples.di.product/src/org/eclipse/e4/examples/di/product/parts/SamplePart.java.1.3
+++ b/eclipseCon2014/org.eclipse.e4.examples.di.product/src/org/eclipse/e4/examples/di/product/parts/SamplePart.java.1.3
@@ -115,8 +115,8 @@ public class SamplePart {
 		tableViewer.setComparator(comparator);
 
 		// TODO 1.3 Call the extended object supplier
-		createLegacyReader();
-		// createDiReader();
+		// createLegacyReader();
+		createDiReader();
 
 		tableViewer.setInput(pluginAuthors);
 	}
